--- a/create_search_index.ipynb
+++ b/create_search_index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -18,6 +18,8 @@
       "sol/bending\n",
       "sol/transverse_shear\n",
       "sol/pressure_vessels\n",
+      "sol/combined_loading\n",
+      "sol/stress_transformation\n",
       "dyn/vectors\n",
       "dyn/vector_calculus\n",
       "dyn/particle_kinetics\n",
@@ -34,7 +36,8 @@
       "sta/internal_forces\n",
       "sta/trusses\n",
       "sta/frames_and_machines\n",
-      "sta/friction\n"
+      "sta/friction\n",
+      "sta/centers_of_mass\n"
      ]
     }
    ],
@@ -53,6 +56,8 @@
     "    \"sol/bending\",\n",
     "    \"sol/transverse_shear\",\n",
     "    \"sol/pressure_vessels\",\n",
+    "    \"sol/combined_loading\",\n",
+    "    \"sol/stress_transformation\",\n",
     "    \"dyn/vectors\",\n",
     "    \"dyn/vector_calculus\",\n",
     "    \"dyn/particle_kinetics\",\n",
@@ -70,6 +75,7 @@
     "    \"sta/trusses\",\n",
     "    \"sta/frames_and_machines\",\n",
     "    \"sta/friction\",\n",
+    "    \"sta/centers_of_mass\"\n",
     "]\n",
     "\n",
     "page_text = []\n",
@@ -114,7 +120,8 @@
     "    banned_strings = [\n",
     "        \"Derivation +\",\n",
     "        \"Solution +\",\n",
-    "        \"All courses Statics Dynamics Solid Mechanics \"\n",
+    "        \"All courses Statics Dynamics Solid Mechanics \",\n",
+    "        \"Scroll back to top\"\n",
     "    ]\n",
     "\n",
     "    for b in banned_strings:    \n",
