finished contact and rolling

--- a/create_search_index.ipynb
+++ b/create_search_index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -26,6 +26,7 @@
       "dyn/particle_kinematics\n",
       "dyn/rigid_body_kinematics\n",
       "dyn/rigid_body_kinetics\n",
+      "dyn/contact_and_rolling\n",
       "sta/introduction\n",
       "sta/cartesian_coordinates\n",
       "sta/vectors_scalars\n",
@@ -64,6 +65,7 @@
     "    'dyn/particle_kinematics',\n",
     "    'dyn/rigid_body_kinematics',\n",
     "    'dyn/rigid_body_kinetics',\n",
+    "    'dyn/contact_and_rolling',\n",
     "    \"sta/introduction\",\n",
     "    \"sta/cartesian_coordinates\",\n",
     "    \"sta/vectors_scalars\",\n",
