ok it all should work

--- a/create_search_index.ipynb
+++ b/create_search_index.ipynb
@@ -34,7 +34,7 @@
       "sta/moments\n",
       "sta/force_systems\n",
       "sta/reaction_forces\n",
-      "sta/internal_forces\n",
+      "sta/shear_moment_diagrams\n",
       "sta/trusses\n",
       "sta/frames_and_machines\n",
       "sta/friction\n",
@@ -73,7 +73,7 @@
     "    \"sta/moments\",\n",
     "    \"sta/force_systems\",\n",
     "    \"sta/reaction_forces\",\n",
-    "    \"sta/internal_forces\",\n",
+    "    \"sta/shear_moment_diagrams\",\n",
     "    \"sta/trusses\",\n",
     "    \"sta/frames_and_machines\",\n",
     "    \"sta/friction\",\n",
@@ -91,7 +91,7 @@
     "    soup = BeautifulSoup(html, features=\"html.parser\")\n",
     "\n",
     "    # kill all script and style elements\n",
-    "    for script in soup([\"script\", \"style\", \"nav\", 'header']):\n",
+    "    for script in soup([\"script\", \"style\", \"nav\", 'header', 'footer']):\n",
     "        script.extract()    # rip it out\n",
     "\n",
     "    try:\n",
