--- a/dev_tools/cbtf.ipynb
+++ b/dev_tools/cbtf.ipynb
@@ -138,7 +138,7 @@
       "[] ['index.html'] []\n",
       "//home/jcrayb/Documents/GitHub/mechref/dist/dyn/work_and_energy.html\n",
       "/home/jcrayb/Documents/GitHub/mechref/dist/sta\n",
-      "['cartesian_coordinates', 'introduction', 'text', 'vectors_scalars', 'blanktopic', 'centers_of_mass', 'forcesystems', 'free_body_diagrams', 'friction', 'hydrostatic_fluid_pressure', 'internal_forces', 'moment_of_inertia', 'moments', 'reaction_forces', 'trusses', 'virtual_work'] ['index.html'] []\n",
+      "['cartesian_coordinates', 'introduction', 'text', 'vectors_scalars', 'blanktopic', 'centers_of_mass', 'forcesystems', 'free_body_diagrams', 'friction', 'hydrostatic_fluid_pressure', 'shear_moment_diagrams', 'moment_of_inertia', 'moments', 'reaction_forces', 'trusses', 'virtual_work'] ['index.html'] []\n",
       "//home/jcrayb/Documents/GitHub/mechref/dist/sta.html\n",
       "/home/jcrayb/Documents/GitHub/mechref/dist/sta/cartesian_coordinates\n",
       "['text'] ['index.html'] ['canvases.js']\n",
@@ -178,9 +178,9 @@
       "/home/jcrayb/Documents/GitHub/mechref/dist/sta/hydrostatic_fluid_pressure\n",
       "[] ['index.html'] []\n",
       "//home/jcrayb/Documents/GitHub/mechref/dist/sta/hydrostatic_fluid_pressure.html\n",
-      "/home/jcrayb/Documents/GitHub/mechref/dist/sta/internal_forces\n",
+      "/home/jcrayb/Documents/GitHub/mechref/dist/sta/shear_moment_diagrams\n",
       "[] ['index.html'] []\n",
-      "//home/jcrayb/Documents/GitHub/mechref/dist/sta/internal_forces.html\n",
+      "//home/jcrayb/Documents/GitHub/mechref/dist/sta/shear_moment_diagrams.html\n",
       "/home/jcrayb/Documents/GitHub/mechref/dist/sta/moment_of_inertia\n",
       "[] ['index.html'] []\n",
       "//home/jcrayb/Documents/GitHub/mechref/dist/sta/moment_of_inertia.html\n",
@@ -291,7 +291,7 @@
       "free_body_diagrams.html\n",
       "friction.html\n",
       "hydrostatic_fluid_pressure.html\n",
-      "internal_forces.html\n",
+      "shear_moment_diagrams.html\n",
       "moment_of_inertia.html\n",
       "moments.html\n",
       "reaction_forces.html\n",
@@ -456,7 +456,7 @@
        " 'free_body_diagrams.html',\n",
        " 'friction.html',\n",
        " 'hydrostatic_fluid_pressure.html',\n",
-       " 'internal_forces.html',\n",
+       " 'shear_moment_diagrams.html',\n",
        " 'moment_of_inertia.html',\n",
        " 'moments.html',\n",
        " 'reaction_forces.html',\n",
