--- a/navbar.ipynb
+++ b/navbar.ipynb
@@ -37,7 +37,7 @@
       "<li class=\"px-2\"><a href=\"/sta/reaction_forces\">Reaction Forces</a></li>\n",
       "<li class=\"px-2\"><a href=\"/sta/trusses\">Trusses</a></li>\n",
       "<li class=\"px-2\"><a href=\"/sta/frames_and_machines\">Frames and Machines</a></li>\n",
-      "<li class=\"px-2\"><a href=\"/sta/internal_forces\">Internal Forces</a></li>\n",
+      "<li class=\"px-2\"><a href=\"/sta/shear_moment_diagrams\">Internal Forces</a></li>\n",
       "<li class=\"px-2\"><a href=\"/sta/friction\">Friction</a></li>\n",
       "<li class=\"px-2\"><a href=\"/sta/centers_of_mass\">Center of Mass</a></li>\n",
       "<li class=\"px-2\"><a href=\"/sta/hydrostatic_fluid_pressure\">Hydrostatic Fluid Pressure</a></li>\n",
