--- a/dev_tools/sections.ipynb
+++ b/dev_tools/sections.ipynb
@@ -60,7 +60,7 @@
        "   {'id': 'free_body_diagrams', 'name': 'Free Body Diagrams'},\n",
        "   {'id': 'friction', 'name': 'Friction'},\n",
        "   {'id': 'hydrostatic_fluid_pressure', 'name': 'Hydrostatic Fluid Pressure'},\n",
-       "   {'id': 'internal_forces', 'name': 'Internal Forces'},\n",
+       "   {'id': 'shear_moment_diagrams', 'name': 'Internal Forces'},\n",
        "   {'id': 'introduction', 'name': 'Introduction'},\n",
        "   {'id': 'moment_of_inertia', 'name': 'Moment Of Inertia'},\n",
        "   {'id': 'moments', 'name': 'Moments'},\n",
