about page works

--- a/dev_tools/html_to_astro.ipynb
+++ b/dev_tools/html_to_astro.ipynb
@@ -261,28 +261,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<DisplayEquation equation=\"\\\\begin{aligned}  \\\\vec{a}_Q &amp;= -\\\\frac{v_Q^2}{\\\\rho_Q} \\\\,\\\\hat{e}_r  + \\\\rho_Q \\\\alpha_Q \\\\,\\\\hat{e}_\\\\theta \\\\\\\\  &amp;= -\\\\frac{\\\\dot{s}_Q^2}{\\\\rho_Q} \\\\,\\\\hat{e}_r  + \\\\ddot{s}_Q \\\\,\\\\hat{e}_\\\\theta \\\\\\\\  &amp;= \\\\frac{\\\\dot{s}_P^2}{\\\\rho_P} \\\\,\\\\hat{e}_n  + \\\\ddot{s}_Q \\\\,\\\\hat{e}_t \\\\\\\\  &amp;= \\\\vec{a}_Q.  \\\\end{aligned}\" />\n"
+      "<DisplayEquation equation=\"  \\\\begin{align}  \\\\delta &= \\\\frac{FL}{EA} \\\\\\\\  [\\\\rm mm] &= \\\\frac{[\\\\rm kN][\\\\rm mm]}{[\\\\rm MPa][\\\\rm mm^2]} \\\\\\\\  [\\\\rm mm] &= \\\\frac{[\\\\rm kN][\\\\rm mm]}{[\\\\frac{\\\\rm N}{\\\\rm mm^2}][\\\\rm mm^2]} =  \\\\frac{[10^3 \\\\rm N][\\\\rm mm^3]}{[\\\\rm N][\\\\rm mm^2]} \\\\\\\\  \\\\therefore [\\\\rm mm] &= [\\\\rm mm]  \\\\end{align}  \" />\n"
      ]
     }
    ],
    "source": [
     "e = r\"\"\"\n",
-    "\\[\\begin{aligned}\n",
-    "  \\vec{a}_Q &amp;= -\\frac{v_Q^2}{\\rho_Q} \\,\\hat{e}_r\n",
-    "  + \\rho_Q \\alpha_Q \\,\\hat{e}_\\theta \\\\\n",
-    "  &amp;= -\\frac{\\dot{s}_Q^2}{\\rho_Q} \\,\\hat{e}_r\n",
-    "  + \\ddot{s}_Q \\,\\hat{e}_\\theta \\\\\n",
-    "  &amp;= \\frac{\\dot{s}_P^2}{\\rho_P} \\,\\hat{e}_n\n",
-    "  + \\ddot{s}_Q \\,\\hat{e}_t \\\\\n",
-    "  &amp;= \\vec{a}_Q.\n",
-    "  \\end{aligned}\\]\n",
+    "\\[\n",
+    "                \\begin{align}\n",
+    "                \\delta &= \\frac{FL}{EA} \\\\\n",
+    "                [\\rm mm] &= \\frac{[\\rm kN][\\rm mm]}{[\\rm MPa][\\rm mm^2]} \\\\\n",
+    "                [\\rm mm] &= \\frac{[\\rm kN][\\rm mm]}{[\\frac{\\rm N}{\\rm mm^2}][\\rm mm^2]} =\n",
+    "                \\frac{[10^3 \\rm N][\\rm mm^3]}{[\\rm N][\\rm mm^2]} \\\\\n",
+    "                \\therefore [\\rm mm] &= [\\rm mm]\n",
+    "                \\end{align}\n",
+    "                \\]\n",
     "\"\"\"\n",
     "\n",
     "print(\"<DisplayEquation equation=\\\"\" + e.replace('\\n', '').replace('              ', '').replace('$', '').replace(r'\\[', '').replace(r'\\]', '').replace(\"\\\\\", r\"\\\\\") + \"\\\" />\")\n"
@@ -307,20 +307,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<InlineEquation equation=\"  \\\\hat{e}_b.\" />\n"
+      "<InlineEquation equation=\" \\\\rm\\\\ MPa = 10^6 \\\\ Pa, 12 \\\\ \\\\text{in} = 1 \\\\ \\\\text{ft}\" />\n"
      ]
     }
    ],
    "source": [
     "e = r\"\"\"\n",
-    "  $\\hat{e}_b$.\n",
+    " $\\rm\\ MPa = 10^6 \\ Pa$, $12 \\ \\text{in} = 1 \\ \\text{ft}$\n",
     "\"\"\"\n",
     "\n",
     "print(\"<InlineEquation equation=\\\"\" + e.replace('\\n', '').replace('              ', '').replace('$', '').replace(r'\\(', '').replace(r'\\)', '').replace(\"\\\\\", r\"\\\\\") + \"\\\" />\")"
