--- a/dev_tools/212-text.ipynb
+++ b/dev_tools/212-text.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import shutil\n",
     "\n",
-    "data = json.load(open('./logs/vec_calc.har'))['log']['entries']\n",
+    "data = json.load(open('../logs/vec_calc.har'))['log']['entries']\n",
     "\n",
     "page = 'vector_calculus'\n",
     "course = 'dyn'"
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
     "        filename = request['request']['url'].replace(f'https://www.mechref.org/{course}/{page}/text/', '').replace(f'http://localhost:4321/{course}/text/', '')\n",
     "        print(filename)\n",
     "        try:\n",
-    "            shutil.copy(f'./dyn/text/{filename}', f'./public/{course}/{page}/text/{filename}')\n",
+    "            shutil.copy(f'../dyn/text/{filename}', f'../public/{course}/{page}/text/{filename}')\n",
     "        except FileNotFoundError as e:\n",
     "            print(e)"
    ]
