--- a/dev_tools/adding_ids.ipynb
+++ b/dev_tools/adding_ids.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -35,8 +35,8 @@
    "source": [
     "course = 'dyn'\n",
     "\n",
-    "for page in os.listdir(f'./src/pages/{course}'):\n",
-    "    with open(os.path.join(f'./src/pages/{course}', page)) as test_file:\n",
+    "for page in os.listdir(f'../src/pages/{course}'):\n",
+    "    with open(os.path.join(f'../src/pages/{course}', page)) as test_file:\n",
     "        data = test_file.read()\n",
     "\n",
     "    soup = BeautifulSoup(data, \"html.parser\")\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
     "course = 'dyn'\n",
     "page = 'rigid_body_kinematics.astro'\n",
     "\n",
-    "with open(os.path.join(f'./src/pages/{course}', page)) as test_file:\n",
+    "with open(os.path.join(f'../src/pages/{course}', page)) as test_file:\n",
     "    data = test_file.read()\n",
     "\n",
     "soup = BeautifulSoup(data, \"html.parser\")\n",
@@ -201,20 +201,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cleaned = sorted([file.replace('.astro', '')  for file in os.listdir('./src/components') if '.astro' in file])\n",
+    "cleaned = sorted([file.replace('.astro', '')  for file in os.listdir('../src/components') if '.astro' in file])\n",
     "cleaned.reverse()\n",
     "replacements = {clean.lower(): clean for clean in cleaned}\n",
     "\n",
-    "for page in os.listdir('./src/pages/sol'):\n",
+    "for page in os.listdir('../src/pages/sol'):\n",
     "\n",
     "    if '_o.astro' in path:\n",
     "        continue\n",
     "\n",
-    "    with open(os.path.join('./src/pages/sol', page)) as test_file:\n",
+    "    with open(os.path.join('../src/pages/sol', page)) as test_file:\n",
     "        data = test_file.read()\n",
     "\n",
     "    soup = BeautifulSoup(data, \"html.parser\")\n",
@@ -228,13 +228,13 @@
     "\n",
     "        sections_list.append([section.name, section['title'], section['id']])\n",
     "\n",
-    "    json_path = os.path.join('./public/sol/trees', page.replace('_o.astro', '.json'))\n",
+    "    json_path = os.path.join('../public/sol/trees', page.replace('_o.astro', '.json'))\n",
     "    json.dump(sections_list, open(json_path, 'w'), indent=2)\n",
     "\n",
     "    for section in sections:\n",
     "        section['id'] = section.attrs['title'].replace(' ', '_').replace(':', '').replace(\"'\", '').lower()\n",
     "\n",
-    "    with open(os.path.join('./src/pages/sol', page.replace('_o.astro', '.astro')), 'w') as dump_file:\n",
+    "    with open(os.path.join('../src/pages/sol', page.replace('_o.astro', '.astro')), 'w') as dump_file:\n",
     "        string = str(soup)\n",
     "        \n",
     "        for wrong, correct in replacements.items():\n",
@@ -245,11 +245,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cleaned = sorted([file.replace('.astro', '')  for file in os.listdir('./src/components') if '.astro' in file])\n",
+    "cleaned = sorted([file.replace('.astro', '')  for file in os.listdir('../src/components') if '.astro' in file])\n",
     "cleaned.reverse()\n",
     "replacements = {clean.lower(): clean for clean in cleaned}"
    ]
