--- a/dev_tools/external_links.ipynb
+++ b/dev_tools/external_links.ipynb
@@ -2,17 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('./public/failure.json', 'r') as f:\n",
-    "    data = f.read()\n",
+    "import os\n",
     "\n",
-    "with open('./public/failure.json', 'w') as f:\n",
-    "    data = data.replace('width: 1000px;', '')\n",
-    "    data = data.replace('height: 800px;', '')\n",
-    "    f.write(data)"
+    "for course in ['sta', 'sol', 'dyn']:\n",
+    "    for page in os.listdir(f'../src/pages/{course}'):\n",
+    "        with open(os.path.join(f'../src/pages/{course}', page), 'r') as test_file:\n",
+    "            data = test_file.read()\n",
+    "        \n",
+    "        data = data.replace('href=\"http', 'target=\"_blank\" rel=\"noopener noreferrer\" href=\"http')\n",
+    "        #data = data.replace('href =\"https', 'href=\"https')\n",
+    "        with open(os.path.join(f'../src/pages/{course}', page), 'w') as test_file:\n",
+    "            test_file.write(data)"
    ]
   },
   {
