--- a/dev_tools/external_links.ipynb
+++ b/dev_tools/external_links.ipynb
@@ -2,20 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import os\n",
     "\n",
     "for course in ['sta', 'sol', 'dyn']:\n",
-    "    for page in os.listdir(f'../src/pages/{course}'):\n",
-    "        with open(os.path.join(f'../src/pages/{course}', page), 'r') as test_file:\n",
+    "    for page in os.listdir(f'./src/pages/{course}'):\n",
+    "        with open(os.path.join(f'./src/pages/{course}', page), 'r') as test_file:\n",
     "            data = test_file.read()\n",
     "        \n",
     "        data = data.replace('href=\"http', 'target=\"_blank\" rel=\"noopener noreferrer\" href=\"http')\n",
     "        #data = data.replace('href =\"https', 'href=\"https')\n",
-    "        with open(os.path.join(f'../src/pages/{course}', page), 'w') as test_file:\n",
+    "        with open(os.path.join(f'./src/pages/{course}', page), 'w') as test_file:\n",
     "            test_file.write(data)"
    ]
   },
