--- a/dev_tools/html_to_astro.ipynb
+++ b/dev_tools/html_to_astro.ipynb
@@ -261,28 +261,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<DisplayEquation equation=\"  \\\\begin{align}  \\\\delta &= \\\\frac{FL}{EA} \\\\\\\\  [\\\\rm mm] &= \\\\frac{[\\\\rm kN][\\\\rm mm]}{[\\\\rm MPa][\\\\rm mm^2]} \\\\\\\\  [\\\\rm mm] &= \\\\frac{[\\\\rm kN][\\\\rm mm]}{[\\\\frac{\\\\rm N}{\\\\rm mm^2}][\\\\rm mm^2]} =  \\\\frac{[10^3 \\\\rm N][\\\\rm mm^3]}{[\\\\rm N][\\\\rm mm^2]} \\\\\\\\  \\\\therefore [\\\\rm mm] &= [\\\\rm mm]  \\\\end{align}  \" />\n"
+      "<DisplayEquation equation=\"\\\\begin{aligned}\\\\Pr \\\\left(T>s+t\\\\mid T>s\\\\right)&={\\\\frac {\\\\Pr \\\\left(T>s+t\\\\cap T>s\\\\right)}{\\\\Pr \\\\left(T>s\\\\right)}}\\\\4pt]&={\\\\frac {\\\\Pr \\\\left(T>s+t\\\\right)}{\\\\Pr \\\\left(T>s\\\\right)}}\\\\4pt]&={\\\\frac {e^{-\\\\lambda (s+t)}}{e^{-\\\\lambda s}}}\\\\4pt]&=e^{-\\\\lambda t}\\\\4pt]&=\\\\Pr(T>t).\\\\end{aligned}\" />\n"
      ]
     }
    ],
    "source": [
     "e = r\"\"\"\n",
-    "\\[\n",
-    "                \\begin{align}\n",
-    "                \\delta &= \\frac{FL}{EA} \\\\\n",
-    "                [\\rm mm] &= \\frac{[\\rm kN][\\rm mm]}{[\\rm MPa][\\rm mm^2]} \\\\\n",
-    "                [\\rm mm] &= \\frac{[\\rm kN][\\rm mm]}{[\\frac{\\rm N}{\\rm mm^2}][\\rm mm^2]} =\n",
-    "                \\frac{[10^3 \\rm N][\\rm mm^3]}{[\\rm N][\\rm mm^2]} \\\\\n",
-    "                \\therefore [\\rm mm] &= [\\rm mm]\n",
-    "                \\end{align}\n",
-    "                \\]\n",
+    "\\begin{aligned}\\Pr \\left(T>s+t\\mid T>s\\right)&={\\frac {\\Pr \\left(T>s+t\\cap T>s\\right)}{\\Pr \\left(T>s\\right)}}\\\\[4pt]&={\\frac {\\Pr \\left(T>s+t\\right)}{\\Pr \\left(T>s\\right)}}\\\\[4pt]&={\\frac {e^{-\\lambda (s+t)}}{e^{-\\lambda s}}}\\\\[4pt]&=e^{-\\lambda t}\\\\[4pt]&=\\Pr(T>t).\\end{aligned}\n",
     "\"\"\"\n",
     "\n",
     "print(\"<DisplayEquation equation=\\\"\" + e.replace('\\n', '').replace('              ', '').replace('$', '').replace(r'\\[', '').replace(r'\\]', '').replace(\"\\\\\", r\"\\\\\") + \"\\\" />\")\n"
@@ -290,14 +282,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\\\begin{aligned}  \\\\vec{a}_Q &amp;= -\\\\frac{v_Q^2}{\\\\rho_Q} \\\\,\\\\hat{e}_r  + \\\\rho_Q \\\\alpha_Q \\\\,\\\\hat{e}_\\\\theta \\\\\\\\  &amp;= -\\\\frac{\\\\dot{s}_Q^2}{\\\\rho_Q} \\\\,\\\\hat{e}_r  + \\\\ddot{s}_Q \\\\,\\\\hat{e}_\\\\theta \\\\\\\\  &amp;= \\\\frac{\\\\dot{s}_P^2}{\\\\rho_P} \\\\,\\\\hat{e}_n  + \\\\ddot{s}_Q \\\\,\\\\hat{e}_t \\\\\\\\  &amp;= \\\\vec{a}_Q.  \\\\end{aligned}\n"
+      "\\\\Pr \\\\left(T>s+t\\\\mid T>s\\\\right)=\\\\Pr(T>t),\\\\qquad \\\\forall s,t\\\\geq 0.}\n"
      ]
     }
    ],
