End of the copy-pasting marathon

--- a/dev_tools/html_to_astro.ipynb
+++ b/dev_tools/html_to_astro.ipynb
@@ -261,35 +261,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<DisplayEquation equation=\"\\\\begin{aligned}\\\\Pr \\\\left(T>s+t\\\\mid T>s\\\\right)&={\\\\frac {\\\\Pr \\\\left(T>s+t\\\\cap T>s\\\\right)}{\\\\Pr \\\\left(T>s\\\\right)}}\\\\4pt]&={\\\\frac {\\\\Pr \\\\left(T>s+t\\\\right)}{\\\\Pr \\\\left(T>s\\\\right)}}\\\\4pt]&={\\\\frac {e^{-\\\\lambda (s+t)}}{e^{-\\\\lambda s}}}\\\\4pt]&=e^{-\\\\lambda t}\\\\4pt]&=\\\\Pr(T>t).\\\\end{aligned}\" />\n"
+      "<DisplayEquation equation=\"\\\\begin{aligned}                            m_1 \\\\vec{v}_{1, i} + m_2 \\\\vec{v}_{2, i} &amp;= m_1 \\\\vec{v}_{1, f} + m_2 \\\\vec{v}_{2, f} \\\\\\\\                            \\\\frac{1}{2} m_1 v_{1, i}^2 + \\\\frac{1}{2} m_2 v_{2, i}^2 &amp; = \\\\frac{1}{2} m_1 v_{1, f}^2 + \\\\frac{1}{2} m_2 v_{2, f}^2                            \\\\end{aligned}\" />\n"
      ]
     }
    ],
    "source": [
     "e = r\"\"\"\n",
-    "\\begin{aligned}\\Pr \\left(T>s+t\\mid T>s\\right)&={\\frac {\\Pr \\left(T>s+t\\cap T>s\\right)}{\\Pr \\left(T>s\\right)}}\\\\[4pt]&={\\frac {\\Pr \\left(T>s+t\\right)}{\\Pr \\left(T>s\\right)}}\\\\[4pt]&={\\frac {e^{-\\lambda (s+t)}}{e^{-\\lambda s}}}\\\\[4pt]&=e^{-\\lambda t}\\\\[4pt]&=\\Pr(T>t).\\end{aligned}\n",
+    "\\[\\begin{aligned}\n",
+    "                            m_1 \\vec{v}_{1, i} + m_2 \\vec{v}_{2, i} &amp;= m_1 \\vec{v}_{1, f} + m_2 \\vec{v}_{2, f} \\\\\n",
+    "                            \\frac{1}{2} m_1 v_{1, i}^2 + \\frac{1}{2} m_2 v_{2, i}^2 &amp; = \\frac{1}{2} m_1 v_{1, f}^2 + \\frac{1}{2} m_2 v_{2, f}^2\n",
+    "                            \\end{aligned}\\]\n",
     "\"\"\"\n",
     "\n",
-    "print(\"<DisplayEquation equation=\\\"\" + e.replace('\\n', '').replace('              ', '').replace('$', '').replace(r'\\[', '').replace(r'\\]', '').replace(\"\\\\\", r\"\\\\\") + \"\\\" />\")\n"
+    "print(\"<DisplayEquation equation=\\\"\" + e.replace('\\n', '').replace('\\t', '').replace('$', '').replace(r'\\[', '').replace(r'\\]', '').replace(\"\\\\\", r\"\\\\\") + \"\\\" />\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\\\Pr \\\\left(T>s+t\\\\mid T>s\\\\right)=\\\\Pr(T>t),\\\\qquad \\\\forall s,t\\\\geq 0.}\n"
+      "\\\\vec{J} = \\\\int_{t_1}^{t_2}  \\\\vec{F} \\\\, dt\n"
      ]
     }
    ],
@@ -299,20 +302,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<InlineEquation equation=\" \\\\rm\\\\ MPa = 10^6 \\\\ Pa, 12 \\\\ \\\\text{in} = 1 \\\\ \\\\text{ft}\" />\n"
+      "<InlineEquation equation=\"dw = d\\\\vec{p}_P and u = \\\\vec{r}_{OP}\" />\n"
      ]
     }
    ],
    "source": [
     "e = r\"\"\"\n",
-    " $\\rm\\ MPa = 10^6 \\ Pa$, $12 \\ \\text{in} = 1 \\ \\text{ft}$\n",
+    "$dw = d\\vec{p}_P$ and $u = \\vec{r}_{OP}$\n",
     "\"\"\"\n",
     "\n",
     "print(\"<InlineEquation equation=\\\"\" + e.replace('\\n', '').replace('              ', '').replace('$', '').replace(r'\\(', '').replace(r'\\)', '').replace(\"\\\\\", r\"\\\\\") + \"\\\" />\")"
