search index updates

--- a/dev_tools/create_search_index.ipynb
+++ b/dev_tools/create_search_index.ipynb
@@ -2,43 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sol/strain\n",
-      "sol/stress\n",
-      "sol/material_properties\n",
-      "sol/axial_loading\n",
-      "sol/torsion\n",
-      "sol/shear_moment_diagrams\n",
-      "sol/bending\n",
-      "sol/transverse_shear\n",
-      "sol/pressure_vessels\n",
-      "sol/combined_loading\n",
-      "sol/stress_transformation\n",
-      "dyn/vectors\n",
-      "dyn/vector_calculus\n",
-      "dyn/particle_kinetics\n",
-      "dyn/particle_kinematics\n",
-      "dyn/rigid_body_kinematics\n",
-      "dyn/rigid_body_kinetics\n",
-      "dyn/contact_and_rolling\n",
+      "sta/moments\n",
       "sta/introduction\n",
       "sta/cartesian_coordinates\n",
-      "sta/vectors_scalars\n",
-      "sta/free_body_diagrams\n",
-      "sta/moments\n",
       "sta/force_systems\n",
+      "sta/vectors_scalars\n",
       "sta/reaction_forces\n",
-      "sta/shear_moment_diagrams\n",
       "sta/trusses\n",
       "sta/frames_and_machines\n",
+      "sta/pltips\n",
+      "sta/free_body_diagrams\n",
       "sta/friction\n",
-      "sta/centers_of_mass\n"
+      "sta/shear_moment_diagrams\n",
+      "sta/moment_of_inertia\n",
+      "sta/virtual_work\n",
+      "sta/centers_of_mass\n",
+      "sta/hydrostatic_fluid_pressure\n",
+      "sol/axial_loading\n",
+      "sol/combined_loading\n",
+      "sol/material_properties\n",
+      "sol/pressure_vessels\n",
+      "sol/strain\n",
+      "sol/stress\n",
+      "sol/transverse_shear\n",
+      "sol/torsion\n",
+      "sol/shear_moment_diagrams\n",
+      "sol/stress_transformation\n",
+      "sol/beam_deflection\n",
+      "sol/buckling\n",
+      "sol/bending\n",
+      "sol/failure_theories\n",
+      "dyn/vector_calculus\n",
+      "dyn/vectors\n",
+      "dyn/particle_kinetics\n",
+      "dyn/particle_kinematics\n",
+      "dyn/contact_and_rolling\n",
+      "dyn/work_and_energy\n",
+      "dyn/rigid_body_kinematics\n",
+      "dyn/rigid_body_kinetics\n"
      ]
     }
    ],
@@ -46,39 +54,16 @@
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import json\n",
+    "import os\n",
     "\n",
-    "searchable_pages = [\n",
-    "    \"sol/strain\",\n",
-    "    \"sol/stress\",\n",
-    "    \"sol/material_properties\",\n",
-    "    \"sol/axial_loading\",\n",
-    "    \"sol/torsion\",\n",
-    "    \"sol/shear_moment_diagrams\",\n",
-    "    \"sol/bending\",\n",
-    "    \"sol/transverse_shear\",\n",
-    "    \"sol/pressure_vessels\",\n",
-    "    \"sol/combined_loading\",\n",
-    "    \"sol/stress_transformation\",\n",
-    "    \"dyn/vectors\",\n",
-    "    \"dyn/vector_calculus\",\n",
-    "    \"dyn/particle_kinetics\",\n",
-    "    'dyn/particle_kinematics',\n",
-    "    'dyn/rigid_body_kinematics',\n",
-    "    'dyn/rigid_body_kinetics',\n",
-    "    'dyn/contact_and_rolling',\n",
-    "    \"sta/introduction\",\n",
-    "    \"sta/cartesian_coordinates\",\n",
-    "    \"sta/vectors_scalars\",\n",
-    "    \"sta/free_body_diagrams\",\n",
-    "    \"sta/moments\",\n",
-    "    \"sta/force_systems\",\n",
-    "    \"sta/reaction_forces\",\n",
-    "    \"sta/shear_moment_diagrams\",\n",
-    "    \"sta/trusses\",\n",
-    "    \"sta/frames_and_machines\",\n",
-    "    \"sta/friction\",\n",
-    "    \"sta/centers_of_mass\"\n",
-    "]\n",
+    "pwd = os.path.dirname(os.getcwd())\n",
+    "\n",
+    "searchable_pages = []\n",
+    "\n",
+    "for dir in ['sta', 'sol', 'dyn']:\n",
+    "    dir_path = os.path.join(pwd, \"src/pages\", dir)\n",
+    "    for page in os.listdir(dir_path):\n",
+    "        searchable_pages.append(os.path.join(dir, page.replace(\".astro\", '')))\n",
     "\n",
     "page_text = []\n",
     "\n",
@@ -131,7 +116,7 @@
     "\n",
     "    page_text.append({\"title\": page.split(\"/\")[1].replace(\"_\", \" \").capitalize(),\"text\": text, 'link': \"/\" + page, 'course': page.split('/')[0]})\n",
     "\n",
-    "json.dump(page_text, open(\"./src/search.json\", \"w\"), indent=2)"
+    "json.dump(page_text, open(\"../src/search.json\", \"w\"), indent=2)"
    ]
   },
   {
