--- a/dev_tools/make_new_course.ipynb
+++ b/dev_tools/make_new_course.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,30 +12,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Course created at /home/jcrayb/Documents/GitHub/mechref/src/pages/me_371.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "course_name = \"ME 371\"\n",
+    "course_name = \"thermodynamics\"\n",
     "\n",
     "cwd = os.getcwd()\n",
     "\n",
-    "course_path = os.path.join(cwd, \"src/pages\", course_name.replace(\" \", \"_\").lower())\n",
+    "course_path = os.path.join(os.path.dirname(cwd), \"src/pages\", course_name.replace(\" \", \"_\").lower())\n",
     "\n",
-    "if os.path.exists(course_path):\n",
-    "    print(\"Course already exists\")\n",
-    "else:\n",
-    "    os.mkdir(course_path)\n",
-    "    print(f\"Course created at {course_path}.\")\n",
-    "    shutil.copy(os.path.join(cwd, \"src/pages\",\"example.astro\"), course_path)"
+    "latex_path = os.path.join(os.path.dirname(cwd), \"public\", \"Thermo\")\n",
+    "\n",
+    "for page in [p for p in os.listdir(latex_path) if p[-4:]==\".tex\"]:\n",
+    "    shutil.copy(os.path.join(os.path.dirname(cwd), \"src/pages/about/examples/example.astro\"), \\\n",
+    "                os.path.join(os.path.dirname(cwd), f\"src/pages/{course_name}/{page.replace('.tex', '').replace(' ', '_').lower()}.astro\"))"
    ]
   },
   {
