--- a/dev_tools/tex_to_astro2.ipynb
+++ b/dev_tools/tex_to_astro2.ipynb
@@ -18,29 +18,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "coursetags = {\n",
-    "    'Statics': 'sta',\n",
-    "    'Dynamics': 'dyn',\n",
-    "    'Solid_Mechanics': 'sol'\n",
+    "    'Thermo':'thermodynamics',\n",
     "}\n",
     "\n",
-    "course = 'Dynamics'\n",
+    "course = 'Thermo'\n",
     "\n",
-    "tex_files = list(sorted([file[:-4] for file in os.listdir(f'./public/{course}') if file[-4:] == '.tex' and (file != 'main.tex')]))\n",
+    "tex_files = list(sorted([file[:-4] for file in os.listdir(f'../public/{course}') if file[-4:] == '.tex' and (file != 'main.tex')]))\n",
     "\n",
-    "tex_files\n",
-    "\n",
-    "if not os.path.exists(f'./src/pages/{coursetags[course]}'):\n",
-    "    os.mkdir(f'./src/pages/{coursetags[course]}')"
+    "if not os.path.exists(f'../src/pages/{coursetags[course]}'):\n",
+    "    os.mkdir(f'../src/pages/{coursetags[course]}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Complex Problems',\n",
+       " 'Cycles',\n",
+       " 'Entropy',\n",
+       " 'First Law',\n",
+       " 'Heat and Work',\n",
+       " 'Phase Diagrams',\n",
+       " 'Second Law',\n",
+       " 'Substances',\n",
+       " 'Thermodynamic Systems',\n",
+       " 'Thermodynamic devices']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tex_files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,77 +77,22 @@
     "    'red': 'RedText',\n",
     "    'textit': 'em',\n",
     "    'textbf': 'strong'\n",
+    "    \"caption\", \"em\"\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\blue{ Contact and Rolling\n",
-      "\\blue{ Contact and Rolling\n",
-      "\\blue{ Contact and Rolling\n",
-      "\\blue{ Particle Kinematics\n",
-      "\\blue{ Particle Kinematics\n",
-      "\\blue{ Particle Kinematics\n",
-      "\\blue{ Particle Kinematics\n",
-      "\\blue{ Particle Kinematics\n",
-      "\\blue{ Particle Kinematics\n",
-      "\\blue{ Particle Kinematics\n",
-      "\\blue{ Particle Kinematics\n",
-      "\\blue{ Particle Kinematics\n",
-      "\\blue{ Particle Kinetics\n",
-      "\\blue{ Particle Kinetics\n",
-      "\\blue{ Particle Kinetics\n",
-      "\\blue{ Particle Kinetics\n",
-      "\\blue{ Particle Kinetics\n",
-      "\\blue{ Particle Kinetics\n",
-      "\\blue{ Particle Kinetics\n",
-      "\\blue{ Rigid Body Kinematics\n",
-      "\\blue{ Rigid Body Kinematics\n",
-      "\\blue{ Rigid Body Kinematics\n",
-      "\\blue{ Rigid Body Kinematics\n",
-      "\\blue{ Rigid Body Kinematics\n",
-      "\\blue{ Rigid Body Kinematics\n",
-      "\\blue{ Rigid Body Kinematics\n",
-      "\\blue{ Rigid Body Kinematics\n",
-      "\\blue{ Rigid Body Kinetics\n",
-      "\\blue{ Rigid Body Kinetics\n",
-      "\\blue{ Rigid Body Kinetics\n",
-      "\\blue{ Rigid Body Kinetics\n",
-      "\\blue{ Rigid Body Kinetics\n",
-      "\\blue{ Rigid Body Kinetics\n",
-      "\\blue{ Vector Calculus\n",
-      "\\blue{ Vector Calculus\n",
-      "\\blue{ Vector Calculus\n",
-      "\\blue{ Vector Calculus\n",
-      "\\blue{ Vector Calculus\n",
-      "\\blue{ Vector Calculus\n",
-      "\\blue{ Vector Calculus\n",
-      "\\blue{ Vector Calculus\n",
-      "\\blue{ Vectors\n",
-      "\\blue{ Vectors\n",
-      "\\blue{ Vectors\n",
-      "\\blue{ Vectors\n",
-      "\\blue{ Vectors\n",
-      "\\blue{ Vectors\n",
-      "\\blue{ Vectors\n",
-      "\\blue{ Vectors\n",
-      "\\blue{ Vectors\n",
-      "\\blue{ Vectors\n",
-      "\\blue{ Vectors\n",
-      "\\blue{ Work and Energy\n",
-      "\\blue{ Work and Energy\n",
-      "\\blue{ Work and Energy\n",
-      "\\blue{ Work and Energy\n",
-      "\\blue{ Work and Energy\n",
-      "\\blue{ Work and Energy\n",
-      "\\blue{ Work and Energy\n"
+      "\\blue{ Thermodynamic Systems\n",
+      "\\blue{ Thermodynamic Systems\n",
+      "\\blue{ Thermodynamic Systems\n"
      ]
     }
    ],
@@ -130,15 +100,20 @@
     "for filename in tex_files:\n",
     "    required_modules = ['Image']\n",
     "\n",
-    "    tex_path = f\"public/{course}/{filename}.tex\"\n",
+    "    tex_path = f\"../public/{course}/{filename}.tex\"\n",
     "\n",
-    "    astro_path = f\"src/pages/{coursetags[course]}/{filename.lower().replace(' ', '_')}.astro\"\n",
+    "    astro_path = f\"../src/pages/{coursetags[course]}/{filename.lower().replace(' ', '_')}.astro\"\n",
     "\n",
     "\n",
     "    with open(tex_path, 'r+') as file:\n",
     "        raw = file.read()\n",
     "\n",
     "        data = TexSoup(raw)\n",
+    "\n",
+    "        #matches = re.sub(r'(?<=\\n)(?!\\s*\\\\)(.*?)(?<!\\})(?=\\n)', raw)\n",
+    "\n",
+    "        raw = re.sub(r'(?<=\\n)(?!\\s*\\\\)(.*?)(?<!\\})(?=\\n)', lambda m: f\"<p>{m.group(1)}</p>\", raw, flags=re.DOTALL)\n",
+    "\n",
     "        for tex, html in replacements.items():\n",
     "            \n",
     "            matches = data.find_all(tex)\n",
@@ -163,6 +138,8 @@
     "        raw = raw.replace('<SubSection>', '<SubSection title=\"\">')\n",
     "        raw = raw.replace('<SubSubSection>', '<SubSubSection title=\"\">')\n",
     "        #print([e for e in data.subsection.descendants])\n",
+    "        \n",
+    "\n",
     "        \n",
     "\n",
     "        raw = raw.replace(r'\\noindent', '')\n",
@@ -215,6 +192,28 @@
     "            db_backslash = eq.replace('\\\\','\\\\\\\\')\n",
     "            raw = raw.replace(f'${eq}$', f'<InlineEquation equation=\"{db_backslash}\" />')\n",
     "\n",
+    "        patterns = [\n",
+    "            r'\\\\begin\\{equation\\}(.*?)\\\\end\\{equation\\}',\n",
+    "            r'\\\\begin\\{equation\\*\\}(.*?)\\\\end\\{equation\\*\\}'\n",
+    "            r'\\\\begin\\{align\\*\\}(.*?)\\\\end\\{align\\*\\}'\n",
+    "            ]\n",
+    "\n",
+    "        # Replacement function\n",
+    "        def replace_equation(match):\n",
+    "            content = match.group(1).strip()\n",
+    "            # Extract label if present\n",
+    "            label_match = re.search(r'\\\\label\\{(.*?)\\}', content)\n",
+    "            label = label_match.group(1) if label_match else \"\"\n",
+    "            # Remove the label from the content\n",
+    "            content = re.sub(r'\\\\label\\{.*?\\}', '', content).strip()\n",
+    "            # Return the replacement string\n",
+    "            return f\"<DisplayEquation equation=\\\"{content.replace('<p>', '').replace('</p>', '')}\\\" title=\\\"{label}\\\" />\"\n",
+    "\n",
+    "        # Perform the replacement\n",
+    "        for pattern in patterns:\n",
+    "            raw = re.sub(pattern, replace_equation, raw, flags=re.DOTALL)\n",
+    "        required_modules.append('DisplayEquation')\n",
+    "\n",
     "        display_equations = re.findall('\\[(.*)\\]', raw)\n",
     "\n",
     "        for eq in display_equations:\n",
@@ -230,28 +229,36 @@
     "        figs = data.find_all('figure')\n",
     "\n",
     "        for fig in figs:\n",
-    "            caption = ' '.join([str(e) for e in list(fig.caption.contents)[1:]])\n",
-    "            \n",
-    "            actual_text = caption[6:-1] if caption[0:5] == r'\\blue' else caption\n",
-    "            \n",
-    "            inline_equations = re.findall('\\$([^$]*)\\$', actual_text)\n",
-    "\n",
-    "            for eq in inline_equations:\n",
-    "                db_backslash = eq.replace('\\\\','\\\\\\\\')\n",
-    "                actual_text = actual_text.replace(f'${eq}$', f'<InlineEquation equation=\"{db_backslash}\" />')\n",
-    "\n",
-    "            if caption[0:5] == r'\\blue':\n",
-    "                actual_text = f'<BlueText>{actual_text}</BlueText>'\n",
-    "\n",
-    "            src = list(fig.includegraphics.text)[-1]\n",
     "            try:\n",
-    "                width = list(fig.includegraphics.text)[0].split(',')[1].split('=')[1].replace('in', '')\n",
+    "                caption = ' '.join([str(e) for e in list(fig.caption.contents)[1:]])\n",
+    "                \n",
+    "                actual_text = caption[6:-1] if caption[0:5] == r'\\blue' else caption\n",
+    "                \n",
+    "                inline_equations = re.findall('\\$([^$]*)\\$', actual_text)\n",
+    "\n",
+    "                for eq in inline_equations:\n",
+    "                    db_backslash = eq.replace('\\\\','\\\\\\\\')\n",
+    "                    actual_text = actual_text.replace(f'${eq}$', f'<InlineEquation equation=\"{db_backslash}\" />')\n",
+    "\n",
+    "                if caption[0:5] == r'\\blue':\n",
+    "                    actual_text = f'<BlueText>{actual_text}</BlueText>'\n",
+    "\n",
+    "                try:\n",
+    "                    src = list(fig.includegraphics.text)[-1]\n",
+    "                except:\n",
+    "                    src=\"\"\n",
+    "                    \n",
+    "                try:\n",
+    "                    width = list(fig.includegraphics.text)[0].split(',')[1].split('=')[1].replace('in', '')\n",
+    "                except:\n",
+    "                    width = '5' \n",
+    "\n",
+    "                #print(actual_text)\n",
+    "\n",
+    "                raw = raw.replace(r'\\end{figure}', f'<Image src=\"/{course}/{src}\" width=\"{width}\">{actual_text}</Image>', 1)\n",
     "            except:\n",
-    "                width = '5' \n",
-    "\n",
-    "            #print(actual_text)\n",
-    "\n",
-    "            raw = raw.replace(r'\\end{figure}', f'<Image src=\"/{course}/{src}\" width=\"{width}\">{actual_text}</Image>', 1)\n",
+    "                raw = raw.replace(str(fig), \"<!-- DRAWING HERE -->\")\n",
+    "        \n",
     "\n",
     "        figs = data.find_all('figure*')\n",
     "\n",
@@ -269,7 +276,11 @@
     "            if caption[0:5] == r'\\blue':\n",
     "                actual_text = f'<BlueText>{actual_text}</BlueText>'\n",
     "\n",
-    "            src = list(fig.includegraphics.text)[-1]\n",
+    "            try:\n",
+    "                src = list(fig.includegraphics.text)[-1]\n",
+    "            except:\n",
+    "                src=\"\"\n",
+    "\n",
     "            try:\n",
     "                width = list(fig.includegraphics.text)[0].split(',')[1].split('=')[1].replace('in', '')\n",
     "            except:\n",
@@ -294,22 +305,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['\\\\vec{a}', 'm', '\\\\vec{F}']"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(790, 1265), match='The \\\\emph{state principle} is a guide to aid in >\n",
+      "<re.Match object; span=(1311, 1634), match='We next apply our knowledge of thermodynamic devi>\n",
+      "<re.Match object; span=(8887, 9708), match='During the cycle, the system contacts sequentiall>\n",
+      "<re.Match object; span=(10055, 10519), match='In processes $2 \\\\to 3$ and $3 \\\\to 4$, work is d>\n",
+      "<re.Match object; span=(21392, 21663), match='Combining the $p(V)$ relations for the ideal gas >\n",
+      "<re.Match object; span=(33592, 34221), match='Instead, the condenser stream is taken to the sat>\n",
+      "<re.Match object; span=(6215, 6215), match=''>\n",
+      "<re.Match object; span=(18823, 18823), match=''>\n",
+      "<re.Match object; span=(3844, 3932), match='%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%>\n",
+      "<re.Match object; span=(16351, 16426), match='\\t\\\\draw[ultra thick, *-] (4.6,1) -- (5.6,2) node>\n",
+      "<re.Match object; span=(6684, 6686), match='\\t\\t'>\n",
+      "<re.Match object; span=(13633, 13922), match='The addition of energy to a system in its referen>\n"
+     ]
     }
    ],
    "source": [
-    "re.findall('\\$([^$]*)\\$', r'ration $\\vec{a}$ of a point mass with mass $m$ to the total applied force $\\vec{F}$ on the mass ')"
+    "for filename in tex_files:\n",
+    "    required_modules = ['Image']\n",
+    "\n",
+    "    tex_path = f\"../public/{course}/{filename}.tex\"\n",
+    "\n",
+    "    astro_path = f\"../src/pages/{coursetags[course]}/{filename.lower().replace(' ', '_')}.astro\"\n",
+    "\n",
+    "\n",
+    "    with open(tex_path, 'r+') as file:\n",
+    "        raw = file.read()\n",
+    "\n",
+    "        data = TexSoup(raw)\n",
+    "\n",
+    "        for match in re.finditer(r'(?<=\\n\\n)(?!\\\\)(.*?)(?<!\\})(?=\\n\\n)', raw):\n",
+    "            print(match)"
    ]
   },
   {
