--- a/dev_tools/tex_to_astro2.ipynb
+++ b/dev_tools/tex_to_astro2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        " 'Thermodynamic devices']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,18 +65,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "':' expected after dictionary key (636849005.py, line 9)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[11], line 9\u001b[0;36m\u001b[0m\n\u001b[0;31m    \"caption\", \"em\"\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m ':' expected after dictionary key\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "replacements = {\n",
     "    'section': 'Section',\n",
@@ -85,26 +76,16 @@
     "    'blue': 'BlueText',\n",
     "    'red': 'RedText',\n",
     "    'textit': 'em',\n",
-    "    'textbf': 'strong'\n",
-    "    \"caption\", \"em\"\n",
+    "    'textbf': 'strong',\n",
+    "    \"caption\": \"em\"\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\\blue{ Thermodynamic Systems\n",
-      "\\blue{ Thermodynamic Systems\n",
-      "\\blue{ Thermodynamic Systems\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for filename in tex_files:\n",
     "    required_modules = ['Image']\n",
@@ -123,19 +104,93 @@
     "\n",
     "        raw = re.sub(r'(?<=\\n)(?!\\s*\\\\)(.*?)(?<!\\})(?=\\n)', lambda m: f\"<p>{m.group(1)}</p>\", raw, flags=re.DOTALL)\n",
     "\n",
+    "        paragraph_regex = [r\"\\\\paragraph\\{([^}]*)\\}\\s*(.*?)(?=(\\\\[a-zA-Z]+|\\Z))\",\n",
+    "        r\"\\\\paragraph\\{([^}]*)\\}\\s*(.*?)(?=(\\\\[a-zA-Z]+|\\Z))\",\n",
+    "        r\"\\\\paragraph\\{([^}]*)\\}\\s*([^\\\\]*)\"]\n",
+    "\n",
+    "        # Function to process each match\n",
+    "        def replace_paragraph(match):\n",
+    "            title = match.group(1).strip()\n",
+    "            text = match.group(2).strip()\n",
+    "            # Example transformation: Wrap title and text in a custom format\n",
+    "            return f\"<h4><strong>{title}</strong></h4>\\n<p>{text}</p> \\n\\n\"\n",
+    "\n",
+    "        # Use re.sub to replace all matches\n",
+    "        for p in paragraph_regex:\n",
+    "            raw = re.sub(p, replace_paragraph, raw)\n",
+    "\n",
+    "        eregex = r\"\\\\emph\\{([^}]*)\\}\"\n",
+    "\n",
+    "        # Use re.sub to replace \\emph{} with <strong>\n",
+    "        raw = re.sub(eregex, r\"<strong>\\1</strong>\", raw)\n",
+    "\n",
+    "        uregex = r\"\\\\underline\\{([^}]*)\\}\"\n",
+    "\n",
+    "        # Use re.sub to replace \\emph{} with <strong>\n",
+    "        raw = re.sub(uregex, r\"<u>\\1</u>\", raw)\n",
+    "\n",
+    "        refregex = r\"\\\\ref\\{([^}]*)\\}\"\n",
+    "\n",
+    "        # Use re.sub to replace \\emph{} with <strong>\n",
+    "        raw = re.sub(refregex, r\"<OrangeText>\\1</OrangeText>\", raw)\n",
+    "\n",
+    "        eqrefregex = r\"~\\\\eqref\\{([^}]*)\\}\"\n",
+    "\n",
+    "        # Use re.sub to replace \\emph{} with <strong>\n",
+    "        raw = re.sub(eqrefregex, r\"<OrangeText>\\1</OrangeText>\", raw)\n",
+    "        \n",
+    "        tealregex = r\"\\\\teal\\{([^}]*)\\}\"\n",
+    "\n",
+    "        # Use re.sub to replace \\emph{} with <strong>\n",
+    "        raw = re.sub(tealregex, r\"<TealText>\\1</TealText>\", raw)\n",
+    "\n",
+    "        blueregex = r\"\\\\blue\\{([^}]*)\\}\"\n",
+    "\n",
+    "        # Use re.sub to replace \\emph{} with <strong>\n",
+    "        raw = re.sub(blueregex, r\"<BlueText>\\1</BlueText>\", raw)\n",
+    "\n",
+    "        '''iregex = r\"\\\\item\\s+(.*)\"\n",
+    "\n",
+    "        # Use re.sub to replace \\emph{} with <strong>\n",
+    "        raw = re.sub(iregex, r\"<Item>\\1</Item>\", raw)'''\n",
+    "\n",
+    "        def transform_itemize(match):\n",
+    "            items = match.group(1)  # Capture the content inside the environment\n",
+    "            # Replace \\item with <Item></Item>\n",
+    "            items_transformed = re.sub(r\"\\\\item\\s+(.*)\", r\"<Item>\\1</Item>\", items)\n",
+    "            # Wrap the environment content with <Itemize>\n",
+    "            return f\"<Itemize>\\n{items_transformed}\\n</Itemize>\"\n",
+    "\n",
+    "        # Function to transform \\enumerate environments\n",
+    "        def transform_enumerate(match):\n",
+    "            items = match.group(1)  # Capture the content inside the environment\n",
+    "            # Replace \\item with <Item></Item>\n",
+    "            items_transformed = re.sub(r\"\\\\item\\s+(.*)\", r\"<Item>\\1</Item>\", items)\n",
+    "            # Wrap the environment content with <Enumerate>\n",
+    "            return f\"<Enumerate>\\n{items_transformed}\\n</Enumerate>\"\n",
+    "\n",
+    "        # Regex to match \\itemize environments\n",
+    "        itemize_regex = r\"\\\\begin\\{itemize\\}([\\s\\S]*?)\\\\end\\{itemize\\}\"\n",
+    "\n",
+    "        # Regex to match \\enumerate environments\n",
+    "        enumerate_regex = r\"\\\\begin\\{enumerate\\}([\\s\\S]*?)\\\\end\\{enumerate\\}\"\n",
+    "\n",
+    "        # Apply the transformations\n",
+    "        raw = re.sub(itemize_regex, transform_itemize, raw)\n",
+    "        raw = re.sub(enumerate_regex, transform_enumerate, raw)\n",
+    "\n",
+    "        # Regex to match \\vspace{} and remove it\n",
+    "        vregex = r\"\\\\vspace\\{[^}]*\\}\"\n",
+    "\n",
+    "        # Use re.sub to remove all \\vspace commands\n",
+    "        raw = re.sub(vregex, \"\", raw)\n",
+    "\n",
     "        for tex, html in replacements.items():\n",
     "            \n",
     "            matches = data.find_all(tex)\n",
     "            \n",
     "            for match in list(matches):\n",
-    "                if tex == 'blue':\n",
-    "                    print(str(match)[:6], filename)\n",
-    "\n",
-    "                if len(list(match.contents)) != 0:\n",
-    "                    #print(str(match))\n",
-    "                    \n",
-    "                    #raw = raw.replace(r\"\\%s{%s}\" % (tex, list(match.contents)[0]), f\"<{html}>{list(match.contents)[0]}</{html}>\")\n",
-    "\n",
+    "                if len(list(match.contents)):\n",
     "                    raw = raw.replace(str(match).replace(r'\\blue {', r'\\blue{'), f\"<{html}>{' '.join(list([str(e) for e in match.contents]))}</{html}>\")\n",
     "\n",
     "                    if html != 'em' and html != 'strong' and (html not in required_modules):\n",
@@ -148,67 +203,26 @@
     "        raw = raw.replace('<SubSubSection>', '<SubSubSection title=\"\">')\n",
     "        #print([e for e in data.subsection.descendants])\n",
     "        \n",
-    "\n",
+    "        required_modules.append('OrangeText')\n",
+    "        required_modules.append('TealText')\n",
     "        \n",
     "\n",
     "        raw = raw.replace(r'\\noindent', '')\n",
-    "        enum = list(data.find_all('enumerate'))\n",
     "\n",
-    "        if len(enum): \n",
-    "            required_modules.append('Enumerate')\n",
-    "            required_modules.append('Item')\n",
+    "        required_modules.append('Enumerate')\n",
+    "        required_modules.append('Item')\n",
+    "        required_modules.append('Itemize')\n",
     "\n",
-    "        for l in enum:\n",
-    "            s = str(l)\n",
-    "            final_str = ''\n",
-    "            for c in l.children:\n",
-    "                final_str += f\"\\t<Item>{list(c.text)[0]}</Item>\\n\"\n",
-    "            \n",
-    "            final_str = '<Enumerate>\\n'+final_str+'</Enumerate>\\n'\n",
-    "\n",
-    "            raw = raw.replace(s, final_str)\n",
-    "\n",
-    "        item = list(data.find_all('itemize'))\n",
-    "\n",
-    "        if len(item): \n",
-    "            required_modules.append('Itemize')\n",
-    "            if 'Item' not in required_modules:\n",
-    "                required_modules.append('Item')\n",
-    "\n",
-    "\n",
-    "        for l in item:\n",
-    "            #print(l)\n",
-    "            s = str(l)\n",
-    "            final_str = ''\n",
-    "            for c in l.children:\n",
-    "                final_str += f\"\\t<Item>{list(c.text)[0]}</Item>\\n\"\n",
-    "            \n",
-    "            final_str = '<Itemize>\\n'+final_str+'</Itemize>\\n'\n",
-    "\n",
-    "            raw = raw.replace(s, final_str)\n",
-    "\n",
-    "        comments = re.findall('\\n%(.*)\\n', raw)\n",
     "        \n",
-    "        for comment in comments:\n",
-    "            raw = raw.replace(f'%{comment}', f'<!-- {comment} -->')\n",
-    "\n",
-    "\n",
-    "        inline_equations = re.findall('\\$([^$]*)\\$', raw)\n",
-    "        \n",
-    "        if len(inline_equations): required_modules.append('InlineEquation')\n",
-    "\n",
-    "        for eq in inline_equations:\n",
-    "            db_backslash = eq.replace('\\\\','\\\\\\\\')\n",
-    "            raw = raw.replace(f'${eq}$', f'<InlineEquation equation=\"{db_backslash}\" />')\n",
-    "\n",
     "        patterns = [\n",
     "            r'\\\\begin\\{equation\\}(.*?)\\\\end\\{equation\\}',\n",
-    "            r'\\\\begin\\{equation\\*\\}(.*?)\\\\end\\{equation\\*\\}'\n",
+    "            r'\\\\begin\\{equation\\*\\}(.*?)\\\\end\\{equation\\*\\}',\n",
     "            r'\\\\begin\\{align\\*\\}(.*?)\\\\end\\{align\\*\\}'\n",
     "            ]\n",
     "\n",
     "        # Replacement function\n",
     "        def replace_equation(match):\n",
+    "            \n",
     "            content = match.group(1).strip()\n",
     "            # Extract label if present\n",
     "            label_match = re.search(r'\\\\label\\{(.*?)\\}', content)\n",
@@ -216,17 +230,89 @@
     "            # Remove the label from the content\n",
     "            content = re.sub(r'\\\\label\\{.*?\\}', '', content).strip()\n",
     "            # Return the replacement string\n",
-    "            return f\"<DisplayEquation equation=\\\"{content.replace('<p>', '').replace('</p>', '')}\\\" title=\\\"{label}\\\" />\"\n",
+    "            #if \"<InlineEquation equation='\" in content:\n",
+    "            #    print(1)\n",
+    "            content = content.replace(\"' />\", \"\\\\)\")\n",
+    "            content = content.replace('<p>', '').replace('</p>', '').replace('\\\"', '\\'')\n",
+    "            content = content.replace('\\\\','\\\\\\\\').replace('\\n', '')\n",
+    "            return f\"<DisplayEquation equation='{content}' title=\\\"{label}\\\" />\"\n",
+    "        \n",
+    "        table_regex = r\"\\\\begin{tabular\\*}{[^}]*}([\\s\\S]*?)\\\\end{tabular\\*}\"\n",
+    "\n",
+    "        def latex_to_html_table(match):\n",
+    "            latex_table = match.group(1).replace(\"\\n\", '').replace('\\t', '')\n",
+    "\n",
+    "            # Split rows by \\\\ (escaping backslash for regex)\n",
+    "            rows = [row.strip() for row in latex_table.split(r\"\\\\\") if row.strip()]\n",
+    "\n",
+    "            # Separate the header and content rows\n",
+    "            header_row = None\n",
+    "            content_rows = []\n",
+    "            for row in rows:\n",
+    "                if r\"\\hline\" in row:\n",
+    "                    continue  # Skip \\hline rows\n",
+    "                if header_row is None:  # First valid row is treated as the header\n",
+    "                    header_row = row\n",
+    "                else:\n",
+    "                    content_rows.append(row)\n",
+    "\n",
+    "            # Convert header row to <thead>\n",
+    "            if header_row:\n",
+    "                header_cols = [col.strip() for col in header_row.split(\"&\")]\n",
+    "                thead = \"<thead>\\n<tr>\\n\" + \"\".join(f\"<th>{col}</th>\" for col in header_cols) + \"\\n</tr>\\n</thead>\"\n",
+    "            else:\n",
+    "                thead = \"\"\n",
+    "\n",
+    "            # Convert content rows to <tbody>\n",
+    "            tbody_rows = []\n",
+    "            for row in content_rows:\n",
+    "                cols = [col.strip() for col in row.split(\"&\")]\n",
+    "                tbody_row = \"<tr>\\n\" + \"\".join(f\"<td>{col}</td>\" for col in cols) + \"\\n</tr>\"\n",
+    "                tbody_rows.append(tbody_row)\n",
+    "            tbody = \"<tbody>\\n\" + \"\\n\".join(tbody_rows) + \"\\n</tbody>\"\n",
+    "\n",
+    "            # Combine <thead> and <tbody> into <table>\n",
+    "            html_table = \"<table border='1'>\\n\" + thead + \"\\n\" + tbody + \"\\n</table>\"\n",
+    "            return html_table.replace('<p>', '').replace('</p>', '')\n",
+    "\n",
+    "\n",
+    "        # Replace LaTeX tables with HTML tables\n",
+    "        raw = re.sub(table_regex, latex_to_html_table, raw)\n",
+    "\n",
+    "        # Regex to match the entire table* block\n",
+    "        table_star_regex = r\"\\\\begin\\{table\\*\\}[\\s\\S]*?\\\\end\\{table\\*\\}\"\n",
+    "\n",
+    "        # Function to process and remove \\label within the matched table* block\n",
+    "        def remove_table_star_and_labels(match):\n",
+    "            table_content = match.group(0)\n",
+    "            # Remove any \\label inside the table* block\n",
+    "            table_content = re.sub(r\"\\\\label\\{[^}]*\\}\", \"\", table_content)\n",
+    "            # Remove \\begin{table*} and \\end{table*}\n",
+    "            table_content = re.sub(r\"\\\\begin\\{table\\*\\}|\\\\end\\{table\\*\\}\", \"\", table_content)\n",
+    "            return table_content.strip().replace('[h]', '').replace('\\small', '')\n",
+    "\n",
+    "        # Apply the regex to transform the content\n",
+    "        raw = re.sub(table_star_regex, remove_table_star_and_labels, raw)\n",
     "\n",
     "        # Perform the replacement\n",
     "        for pattern in patterns:\n",
     "            raw = re.sub(pattern, replace_equation, raw, flags=re.DOTALL)\n",
+    "\n",
+    "        inline_equations = re.findall('\\$([^$]*)\\$', raw)\n",
+    "        \n",
+    "        if len(inline_equations): required_modules.append('InlineEquation')\n",
+    "\n",
+    "        for eq in inline_equations:\n",
+    "            db_backslash = eq.replace('\\\\','\\\\\\\\').replace('\\n', '')\n",
+    "            raw = raw.replace(f'${eq}$', f'<InlineEquation equation=\"{db_backslash}\" />')\n",
+    "\n",
+    "\n",
     "        required_modules.append('DisplayEquation')\n",
     "\n",
     "        display_equations = re.findall('\\[(.*)\\]', raw)\n",
-    "\n",
+    "    \n",
     "        for eq in display_equations:\n",
-    "            db_backslash = eq.replace('\\\\','\\\\\\\\')\n",
+    "            db_backslash = eq.replace('\\\\','\\\\\\\\').replace('\\n', '')\n",
     "            if r'\\[%s]'% (eq) in raw and ('DisplayEquation' not in required_modules): required_modules.append('DisplayEquation')\n",
     "            raw = raw.replace(r'\\[%s]'% (eq), f'<DisplayEquation equation=\"{db_backslash}\" />')\n",
     "\n",
@@ -235,74 +321,20 @@
     "        for comp in required_modules:\n",
     "            imports += f'import {comp} from \"../../components/{comp}.astro\" \\n' \n",
     "\n",
-    "        figs = data.find_all('figure')\n",
+    "        figregex = r\"\\\\begin\\{figure\\}.*?\\\\end\\{figure\\}\"\n",
     "\n",
-    "        for fig in figs:\n",
-    "            try:\n",
-    "                caption = ' '.join([str(e) for e in list(fig.caption.contents)[1:]])\n",
-    "                \n",
-    "                actual_text = caption[6:-1] if caption[0:5] == r'\\blue' else caption\n",
-    "                \n",
-    "                inline_equations = re.findall('\\$([^$]*)\\$', actual_text)\n",
-    "\n",
-    "                for eq in inline_equations:\n",
-    "                    db_backslash = eq.replace('\\\\','\\\\\\\\')\n",
-    "                    actual_text = actual_text.replace(f'${eq}$', f'<InlineEquation equation=\"{db_backslash}\" />')\n",
-    "\n",
-    "                if caption[0:5] == r'\\blue':\n",
-    "                    actual_text = f'<BlueText>{actual_text}</BlueText>'\n",
-    "\n",
-    "                try:\n",
-    "                    src = list(fig.includegraphics.text)[-1]\n",
-    "                except:\n",
-    "                    src=\"\"\n",
-    "                    \n",
-    "                try:\n",
-    "                    width = list(fig.includegraphics.text)[0].split(',')[1].split('=')[1].replace('in', '')\n",
-    "                except:\n",
-    "                    width = '5' \n",
-    "\n",
-    "                #print(actual_text)\n",
-    "\n",
-    "                raw = raw.replace(r'\\end{figure}', f'<Image src=\"/{course}/{src}\" width=\"{width}\">{actual_text}</Image>', 1)\n",
-    "            except:\n",
-    "                raw = raw.replace(str(fig), \"<!-- DRAWING HERE -->\")\n",
+    "        # Use re.sub to remove all figure environments\n",
+    "        raw = re.sub(figregex, \"\", raw, flags=re.DOTALL)\n",
     "        \n",
+    "        # Remove matching <p> tags\n",
+    "        raw = re.sub(r\"<p>\\s*%+\\s*</p>\", \"\", raw)\n",
     "\n",
-    "        figs = data.find_all('figure*')\n",
-    "\n",
-    "        for fig in figs:\n",
-    "            caption = ' '.join([str(e) for e in list(fig.caption.contents)[1:]])\n",
-    "            \n",
-    "            actual_text = caption[6:-1] if caption[0:5] == r'\\blue' else caption\n",
-    "            \n",
-    "            inline_equations = re.findall('\\$([^$]*)\\$', actual_text)\n",
-    "\n",
-    "            for eq in inline_equations:\n",
-    "                db_backslash = eq.replace('\\\\','\\\\\\\\')\n",
-    "                actual_text = actual_text.replace(f'${eq}$', f'<InlineEquation equation=\"{db_backslash}\" />')\n",
-    "\n",
-    "            if caption[0:5] == r'\\blue':\n",
-    "                actual_text = f'<BlueText>{actual_text}</BlueText>'\n",
-    "\n",
-    "            try:\n",
-    "                src = list(fig.includegraphics.text)[-1]\n",
-    "            except:\n",
-    "                src=\"\"\n",
-    "\n",
-    "            try:\n",
-    "                width = list(fig.includegraphics.text)[0].split(',')[1].split('=')[1].replace('in', '')\n",
-    "            except:\n",
-    "                width = '5' \n",
-    "\n",
-    "            #print(actual_text)\n",
-    "\n",
-    "            raw = raw.replace(r'\\end{figure*}', f'<Image src=\"/{course}/{src}\" width=\"{width}\">{actual_text}</Image>', 1)\n",
     "\n",
     "        #print(imports)\n",
     "\n",
     "        raw = '---\\n' + imports + '---\\n' + f'<Layout title=\"{filename}\">' + '\\n' + raw + '\\n' +'</Layout>'\n",
-    "        \n",
+    "\n",
+    "        raw = raw.replace(\"<p></p>\", \"\")\n",
     "\n",
     "        astro_file = open(astro_path, mode='w+')\n",
     "\n",
@@ -364,7 +396,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "usr",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
