--- a/dev_tools/html_to_astro.ipynb
+++ b/dev_tools/html_to_astro.ipynb
@@ -261,23 +261,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<DisplayEquation equation=\"\\\\begin{aligned}                            m_1 \\\\vec{v}_{1, i} + m_2 \\\\vec{v}_{2, i} &amp;= m_1 \\\\vec{v}_{1, f} + m_2 \\\\vec{v}_{2, f} \\\\\\\\                            \\\\frac{1}{2} m_1 v_{1, i}^2 + \\\\frac{1}{2} m_2 v_{2, i}^2 &amp; = \\\\frac{1}{2} m_1 v_{1, f}^2 + \\\\frac{1}{2} m_2 v_{2, f}^2                            \\\\end{aligned}\" />\n"
+      "<DisplayEquation equation=\"\\\\begin{align}\\\\frac{d}{dt}\\\\left(S - S_0\\\\right) &= \\\\frac{d}{dt}\\\\left( \\\\sum_i \\\\frac{Q_i}{T_{\\\\text{b},i}} +\\\\sigma \\\\right) \\\\\\\\\\\\frac{dS}{dt} &=\\\\sum_i \\\\frac{\\\\dot{Q}_i}{T_{\\\\text{b},i}} +\\\\dot{\\\\sigma}.\\\\end{align}`\" />\n"
      ]
     }
    ],
    "source": [
     "e = r\"\"\"\n",
-    "\\[\\begin{aligned}\n",
-    "                            m_1 \\vec{v}_{1, i} + m_2 \\vec{v}_{2, i} &amp;= m_1 \\vec{v}_{1, f} + m_2 \\vec{v}_{2, f} \\\\\n",
-    "                            \\frac{1}{2} m_1 v_{1, i}^2 + \\frac{1}{2} m_2 v_{2, i}^2 &amp; = \\frac{1}{2} m_1 v_{1, f}^2 + \\frac{1}{2} m_2 v_{2, f}^2\n",
-    "                            \\end{aligned}\\]\n",
+    "\\begin{align}\n",
+    "\\frac{d}{dt}\\left(S - S_0\\right) &= \\frac{d}{dt}\\left( \\sum_i \\frac{Q_i}{T_{\\text{b},i}} +\\sigma \\right) \\\\\n",
+    "\\frac{dS}{dt} &=\\sum_i \\frac{\\dot{Q}_i}{T_{\\text{b},i}} +\\dot{\\sigma}.\n",
+    "\\end{align}`\n",
     "\"\"\"\n",
     "\n",
     "print(\"<DisplayEquation equation=\\\"\" + e.replace('\\n', '').replace('\\t', '').replace('$', '').replace(r'\\[', '').replace(r'\\]', '').replace(\"\\\\\", r\"\\\\\") + \"\\\" />\")\n"
@@ -360,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
