--- a/dev_tools/tex_to_astro.ipynb
+++ b/dev_tools/tex_to_astro.ipynb
@@ -322,7 +322,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "usr",
    "language": "python",
    "name": "python3"
   },
@@ -336,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
